--- a/appicon/src/main/AndroidManifest.xml
+++ b/appicon/src/main/AndroidManifest.xml
@@ -2,23 +2,27 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mz.sanfen.appicon">
 
-    <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES"/>
+    <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES" />
 
-    <application android:allowBackup="true" android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name" android:supportsRtl="true" android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+    <application
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
+
+        <activity
+            android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
             </intent-filter>
 
         </activity>
-        
-        
+
         <activity-alias
-            android:name=".ic_lancher"
-            android:enabled="false"
+            android:name=".icon_1"
+            android:enabled="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:targetActivity=".MainActivity">
@@ -30,8 +34,8 @@
         </activity-alias>
 
         <activity-alias
-            android:name=".steam_icon_72px"
-            android:enabled="true"
+            android:name=".icon_2"
+            android:enabled="false"
             android:icon="@mipmap/steam_icon_72px"
             android:label="@string/app_name"
             android:targetActivity=".MainActivity">
@@ -40,7 +44,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity-alias>
-
     </application>
 
 </manifest>
