--- a/ipc/src/main/AndroidManifest.xml
+++ b/ipc/src/main/AndroidManifest.xml
@@ -8,8 +8,16 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+
+        <activity android:name=".HomeActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
+
+        <activity android:name=".MainActivity" />
 
         <service
             android:name=".AIDLService"
@@ -18,6 +26,7 @@
             android:process=":remote">
             <intent-filter>
                 <action android:name="com.mz.sanfen.ipc" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </service>
@@ -25,22 +34,23 @@
         <activity
             android:name=".messenger.MessengerActivity"
             android:label="@string/title_activity_messenger"
-            android:theme="@style/AppTheme.NoActionBar" >
-
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-
+            android:theme="@style/AppTheme.NoActionBar">
         </activity>
 
         <service
             android:name=".messenger.MessengerService"
             android:enabled="true"
             android:exported="true"
-            android:process=":messenger"
-            />
+            android:process=":messenger" />
+
+        <provider
+            android:name=".provider.BookProvider"
+            android:authorities="com.mz.sanfen.ipc.provider.BookProvider"
+            android:permission="com.mz.sanfen.ipc"
+            android:process=":provider" />
+
+        <activity android:name=".provider.ProviderActivity" />
+
     </application>
 
 </manifest>
