--- a/ipc/src/main/AndroidManifest.xml
+++ b/ipc/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity android:name=".HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,7 +15,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity android:name=".MainActivity" />
 
         <service
@@ -34,8 +32,7 @@
         <activity
             android:name=".messenger.MessengerActivity"
             android:label="@string/title_activity_messenger"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar" />
 
         <service
             android:name=".messenger.MessengerService"
@@ -51,6 +48,12 @@
 
         <activity android:name=".provider.ProviderActivity" />
 
+        <service
+            android:name=".socket.TCPServerService"
+            android:enabled="true"
+            android:exported="true" />
+
+        <activity android:name=".socket.TCPClientActivity"></activity>
     </application>
 
 </manifest>
